fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -392,6 +392,10 @@
                         height: 25px;
                         line-height: 25px;
                         max-width: 100%;
+
+                        [dir='rtl'] & {
+                            text-align: right;
+                        }
                     }
                     .fa, .cptools {
                         color: @creation-bg-color;
